Align floating avatar image correctly

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,7 +9,6 @@
 .floatingInner {
     margin: 0 auto;
     max-width: 850px;
-    margin-left: 30%;
 }
 
 .header {
